Sat Apr 17 15:19:41 BST 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Filenames with high byte characters were not
  	being scanned on MACOS/X

Sat Apr 17 00:19:08 CEST 2004 (tk)
----------------------------------
  V 0.70

Fri Apr 16 23:20:19 CEST 2004 (tk)
----------------------------------
  * freshclam: fix SIGHUP handling (patch by Dr Matthew J Seaman
	       <m.seaman*infracaninophile.co.uk>)

Fri Apr 16 22:21:14 CEST 2004 (tk)
----------------------------------
  * docs: update

Fri Apr 16 17:42:51 CEST 2004 (tk)
----------------------------------
  * clamd: rename ArchiveDetectEncrypted to ArchiveBlockEncrypted
  * clamscan: rename --detect-encrypted to --block-encrypted

Fri Apr 16 14:43:25 CEST 2004 (tk)
----------------------------------
  * libclamav: scan ">From " messages

Fri Apr 16 12:40:03 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: fix possible crash

Thu Apr 15 16:26:38 CEST 2004 (tk)
----------------------------------
  * libclamav: add a "clamav-" prefix to temporary file names (Dirk Mueller
	       <dmuell*gmx.net>)
  * clamd: clamuko: fix signal handling (problem reported by Claudio Alonso
	   <cfalonso*yahoo.com>)

Thu Apr 15 10:54:02 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Handle systems without inet_ntop()

Thu Apr 15 00:51:29 CEST 2004 (tk)
----------------------------------
  * libclamav: cli_scanmail: fix a hole in recursion limit (patch by
	       Maxim Dounin <mdounin*rambler-co.ru>)
  * clamscan: fix HPUX compilation error (reported by Rolf Eike Beer
	      <eike*mail.math.uni-mannheim.de>)

Wed Apr 14 09:32:50 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	When debugging print the email number when
	handling UNIX style mailboxes

Wed Apr 14 03:24:44 CEST 2004 (tk)
----------------------------------
  * clamd: VirusEvent: drop support for %f
	   (http://www.securitytracker.com/alerts/2004/Apr/1009615.html)
